Update cleveland website project 1.html

--- a/cleveland website project 1.html
+++ b/cleveland website project 1.html
@@ -238,17 +238,17 @@
             <div class="attractions-grid">
                 <div class="attraction-card">
                     <h3>Cleveland Museum of Art</h3>
-                    <img src="/Cleveland-website-Project-1/images/cleveland-museum.jpg" alt="Cleveland Museum of Art with reflecting pool and landscaped grounds" />
+                    <img src="images/Cleveland Museum of Art.jpg" alt="Cleveland Museum of Art with reflecting pool and landscaped grounds" />
                     <p>One of the most respected art museums in the world, with free admission. Beautiful grounds feature a reflecting pool and classical architecture.</p>
                 </div>
                 <div class="attraction-card">
                     <h3>Rock and Roll Hall of Fame</h3>
-                    <img src="/Cleveland-website-Project-1/images/rock-hall.jpg" alt="Rock and Roll Hall of Fame building at sunset with Cleveland skyline" />
+                    <img src="images/Rock and Roll Hall of Fame.jpg" alt="Rock and Roll Hall of Fame building at sunset with Cleveland skyline" />
                     <p>Explore the history of rock and roll in this iconic museum, featuring a stunning modern architectural design on the shores of Lake Erie.</p>
                 </div>
                 <div class="attraction-card">
                     <h3>West Side Market</h3>
-                    <img src="/Cleveland-website-Project-1/images/west-side-market.jpg" alt="Historic West Side Market building with Cleveland skyline" />
+                    <img src="images/West Side Market.jpg" alt="Historic West Side Market building with Cleveland skyline" />
                     <p>Historic public market featuring local vendors and ethnic foods in a beautiful brick building dating back to 1912.</p>
                 </div>
             </div>
